--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,4 @@
 body {
-font-family: sans-serif;
-background: white;
-}
-
-.Todo-Item:hover .trash-icon{
-  display:block;
+  background-color: rgb(11, 255, 206);
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
